# proy-fireye-ros2

./: .gitignore  README.md
Proyecto-Robotica-Fireye/: package.xml
bags/rosbag2_2026_03_30-00_48_16/: metadata.yaml
bags/rosbag2_2026_03_30-00_50_31/: metadata.yaml  rosbag2_2026_03_30-00_50_31_0.mcap
bags/rosbag2_2026_03_30-00_51_30/: metadata.yaml
fireye/ros2_ws/fireye_world/: package.xml
fireye/ros2_ws/install/: local_setup.sh  setup.sh
fireye/ros2_ws/log/: latest_build
proy-fireye/: .gitignore  package.xml
proy-fireye_world/: CMakeLists.txt
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/my_nav2_system/: package.xml  setup.py
src/my_nav2_system/launch/: my_localization.launch.py  my_map_server.launch.py
src/my_nav2_system/map/: my_map.yaml
src/my_nav2_system/param/: burger.yaml
src/my_nav2_system/rviz/: nav_config.rviz  tb3_navigation2.rviz
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/my_robot_controller/: move_robot.py
src/my_world/: CMakeLists.txt  package.xml
src/my_world/launch/: my_world.launch.py
src/my_world/worlds/: my_world.world
src/proy-fireye/: CMakeLists.txt  package.xml
src/proy-fireye/install/: local_setup.sh  setup.sh
src/proy-fireye/install/proy_fireye/share/ament_index/resource_index/parent_prefix_path/: proy_fireye
src/proy-fireye/install/proy_fireye/share/proy_fireye/: package.sh
src/proy-fireye/log/: latest_build
src/proy-fireye/scripts/: danger_zone_detector.py
src/proy-fireye_world/: CMakeLists.txt
src/proy-fireye_world/launch/: fireye_world.launch.py
src/proy_fireye_my_nav2_system/: package.xml  setup.cfg  setup.py
src/proy_fireye_my_nav2_system/launch/: fireye_navigation.launch.py  my_map_server.launch.py
src/proy_fireye_my_nav2_system/map/: my_map.pgm  my_map.yaml
src/proy_fireye_my_nav2_system/proy_fireye_my_nav2_system/: initial_pose_pub.py
src/proy_fireye_my_nav2_system/rviz/: fireye_navegation2.rviz  fireye_navigation2.rviz
src/proy_fireye_world/: package.xml
(+17 files in other folders)
