<?xml version="1.0"?>
<?xml-model href=http://download.ros.org/schema/package_format3.xsd schematypens="http://www.w3.org/2001/XMLSchema"?>
    <package format="3">
        <name>Proyecto-Robotica-Fireye</name>
        <version>2.1.4</version>
        <description>
            ROS 2 packages for Proyecto-Robotica-Fireye
        </description>
    <maintainer email="asperez@eln.upv.es">Asun Perez</maintainer>
    <license>Apache 2.0</license>
    <url type="website">http://XXXXXXX</url>
    <url type="repository">https://github.com/XXXXXXX</url>
    <url type="bugtracker">https://github.com/XXXXXX</url>
    <author email="XXXXX">XXXXX</author>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>Proyecto-Robotica-Fireye-mundo</exec_depend>
    <exec_depend>Proyecto-Robotica-Fireye-punto</exec_depend>
    <exec_depend>Proyecto-Robotica-Fireye-ruta</exec_depend>
    <exec_depend>Proyecto-Robotica-Fireye-captacion</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>