<?xml version="1.0"?>
<package format="3">
  <name>proy_fireye</name>
  <version>0.0.0</version>
  <description>Paquete principal del proyecto Fireye</description>

  <maintainer email="tu_email@ejemplo.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

 <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
